# sb-backbone

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Makefile  alembic.ini  docker-compose.dev.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: c5538c881a50_new_migration.py
app/: main.py
app/core/: config.py  database.py  models.py
app/repositories/: book_repository.py
app/routes/: book.py
app/schemas/: book.py
app/services/: book_service.py
