[project]
name = "ms-auth"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Coutinho",email = "lucasalvcoutinho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pydantic[email] (>=2.10.5,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "opentelemetry-api (>=1.29.0,<2.0.0)",
    "opentelemetry-sdk (>=1.29.0,<2.0.0)",
    "opentelemetry-instrumentation (>=0.50b0,<0.51)",
    "opentelemetry-exporter-otlp (>=1.29.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.50b0,<0.51)",
    "opentelemetry-instrumentation-requests (>=0.50b0,<0.51)",
    "alembic (>=1.14.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.1,<3.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "opentelemetry-exporter-jaeger (>=1.21.0,<2.0.0)",
    "opentelemetry-instrumentation-logging (>=0.50b0,<0.51)",
    "python-json-logger (>=3.2.1,<4.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "openai (>=1.60.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
psycopg2-binary = "^2.9.10"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
